# data-oauth-integrator

./: .gitignore  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
src/: charm.py  constants.py  models.py  workload.py
src/rest/: entrypoint.py
src/rest/app/: __init__.py
src/rest/app/apis/v1/: __init__.py  healthcheck.py  oauth2.py
src/rest/app/core/: config.py  middlewares.py  models.py  security.py
src/rest/app/services/: claims.py
